Se rehace sección 2.1.3: kappa en el apartado 4.3.2 y la evaluación del sistema en el capítulo 6

--- a/capitulos/ConclusionesYTrabajoFuturo.tex
+++ b/capitulos/ConclusionesYTrabajoFuturo.tex
@@ -8,6 +8,8 @@
 
 \noindent Este capítulo recopila las diferentes conclusiones extraídas del trabajo realizado, y propone algunas líneas de trabajo futuro. Las siguientes secciones son las que suelen contener este tipo de capítulos, aunque pueden variar dependiendo del tema del trabajo.
 
+Incluso se me ocurre la creación de un léxico machista específico para el español utilizando para ello el training. Podríamos usar WordNet para expandir sinónimo y antónimos, etc.
+
 \section{Conclusiones}
 \label{sec:Conclu}
 
