Se añade guía de anotación como anexo

--- a/Plantilla TFM.tex
+++ b/Plantilla TFM.tex
@@ -258,6 +258,9 @@ Finalmente, se identifican algunos problemas y líneas de trabajo futuras.
 
 Publicaciones derivadas del trabajo realizado.
 
+\appendix
+\chapter{Guía de anotación}
+\includepdf[pages={1-7}]{Guia_anotacion.pdf}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% lISTA DE TAREAS PENDIENTES.
