Se elimina capítulo 7 y Anexo de publicaciones

--- a/Plantilla TFM.tex
+++ b/Plantilla TFM.tex
@@ -229,7 +229,6 @@ Finalmente, se identifican algunos problemas y líneas de trabajo futuras.
 \input{capitulos/Corpus}
 \input{capitulos/Sistema_Metodo_Caso_de_Estudio}
 \input{capitulos/Evaluacion}
-\input{capitulos/Discusion}
 \input{capitulos/ConclusionesYTrabajoFuturo}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -250,13 +249,13 @@ Finalmente, se identifican algunos problemas y líneas de trabajo futuras.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% APENDICES SI PROCEDE (COMENTAR)
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\appendix
-\chapter{Publicaciones}
-\label{ch:publicaciones}
-\fancyhead[RE]{\textsc{APÉNDICE} \thechapter. Publicaciones}
-\fancyhead[LO]{\textsc{APÉNDICE} \thechapter. Publicaciones}
+%\appendix
+%\chapter{Publicaciones}
+%\label{ch:publicaciones}
+%\fancyhead[RE]{\textsc{APÉNDICE} \thechapter. Publicaciones}
+%\fancyhead[LO]{\textsc{APÉNDICE} \thechapter. Publicaciones}
 
-Publicaciones derivadas del trabajo realizado.
+%Publicaciones derivadas del trabajo realizado.
 
 \appendix
 \chapter{Guía de anotación}
